tests/invalid/exported_object_non_abi_field.wio
interface IWorker {
    fn Run() -> i32;
}

@Export
object BadProfile {
    public worker: IWorker;
}
